# linework

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/: copilot-instructions.md
src/linework/: __init__.py  __main__.py  bootstrap.py  capabilities.py  cli.py  config.py  constants.py  update_check.py
src/linework/assets/: __init__.py
src/linework/core/: commands.py  errors.py  objects.py  scene.py
src/linework/render/: png.py
src/linework/storage/: ids.py  lock.py  models.py  session.py
src/linework/watch/: __init__.py
src/mural/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  constants.py
src/mural/core/: __init__.py  commands.py  objects.py  scene.py
src/mural/render/: __init__.py  png.py
src/mural/storage/: __init__.py  ids.py  lock.py  models.py  session.py
src/mural/watch/: __init__.py
tests/: test_agent_loop.py  test_cli.py  test_convenience_cli.py  test_packaging.py  test_regression_fixtures.py  test_scene_engine.py  test_update_check.py  test_watcher.py
tests/fixtures/regressions/agent-ux-session/: commands.jsonl  scene.json  session.json
tests/fixtures/regressions/batch-jsonl-session/: commands.jsonl  scene.json  session.json
tests/fixtures/regressions/blank-session/: scene.json  session.json
tests/fixtures/regressions/image-placement-session/: commands.jsonl  scene.json  session.json
tests/fixtures/regressions/polygon-session/: commands.jsonl  scene.json
tests/fixtures/regressions/simple-shapes-session/: commands.jsonl  scene.json  session.json
(+6 files in other folders)
